--- a/assets/resources/custom/custom.css
+++ b/assets/resources/custom/custom.css
@@ -9,7 +9,7 @@ left-nav {
   left: 0;
   height: 100%;
   width: 300px;
-  border-right: 1px solid #e0e0e0;
+  border-right: 8px solid #f0f0f0;
 }
 
 nav-element {
@@ -53,7 +53,6 @@ activities {
   align-items: start;
   flex-wrap: wrap;
   width: 300px;
-  border-left: 1px solid #e0e0e0;
   height: 100%;
   padding: 20px;
 }
@@ -66,7 +65,6 @@ content-tab {
   width: calc(100% - 600px);
   height: 100%;
   overflow-y: scroll;
-
   scrollbar-width: thin;
-  scrollbar-color: #ccc #fff;
+  scrollbar-color: #ccc #f0f0f0;
 }
