--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@
     margin-top: 30px;
   }
   
-  form {
+  .signup-form {
     width: 400px;
     margin: 50px auto;
     background-color: #fff;
@@ -447,7 +447,14 @@
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
+
+  .formlogo {
+    margin: 0px auto;
+    display: block;
+  }
   
+ 
+
   label {
     display: block;
     font-size: 16px;
